--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,3 +31,5 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       if: ${{ matrix.python-version == '3.12' }}
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
