Move library into own folder

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python --version
         echo "import tests.actions_test" > test.py
-        coverage run --source models,examples test.py
+        coverage run --source facenet_pytorch/models,examples tests/actions_test.py
         coverage report
         coverage xml
     - name: Upload coverage to Codecov
