--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,20 +14,35 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
+      id: setup-python
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        virtualenv-create: true
+        virtualenvs-in-project: true
+    - name: Poetry cache
+      id: poetry_cache
+      uses: actions/cache@v4
+      with:
+        save-always: true
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r tests/actions_requirements.txt
+        poetry install --with dev --with test
     - name: Test with pytest
       run: |
         python --version
         echo "import tests.actions_test" > test.py
-        coverage run --source facenet_pytorch/models,examples tests/actions_test.py
-        coverage report
-        coverage xml
+        poetry run coverage run --source facenet_pytorch/models,examples tests/actions_test.py
+        poetry run coverage report
+        poetry run coverage xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       if: ${{ matrix.python-version == '3.12' }}
