--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
-        virtualenv-create: true
+        virtualenvs-create: true
         virtualenvs-in-project: true
     - name: Poetry cache
       id: poetry_cache
