Coverage exclude_also

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,20 @@ coverage = "^7.5.3"
 requires = ["poetry-core>=1.9"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.coverage.report]
+exclude_also = [
+    "def __repr__",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+]
+
 [tool.ruff]
 force-exclude = true
 line-length = 120
