--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,10 +10,10 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
-        poetry-version: ["^2.0"]
+        poetry-version: ["latest"]
         include:
           - python-version: "3.8"
-            poetry-version: "^1.8"
+            poetry-version: "1.8"
 
     steps:
     - uses: actions/checkout@v4
