--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,7 +9,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        poetry-version: ["latest"]
+        include:
+          - python-version: "3.8"
+            poetry-version: "1.8.5"
 
     steps:
     - uses: actions/checkout@v4
@@ -21,6 +25,7 @@ jobs:
     - name: Install Poetry
       uses: snok/install-poetry@v1
       with:
+        version: ${{ matrix.poetry-version }}
         virtualenvs-create: true
         virtualenvs-in-project: true
     - name: Poetry cache
